--- a/index.html
+++ b/index.html
@@ -28,6 +28,47 @@
          </div>
     </header>
     <main>
+        <section class="team-container display-flex">
+            <div class="team-image">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-intro">
+                 <h3 class="team-title"><span id="quic-list">Quick list </span> <span class="of-our">of Our </span> <span class="feature">Features</span></h3>
+                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                 <button class="button1">Explore More</button>
+            </div>
+        </section>
+        <section>
+            <div class="fact-container">
+                <h3>Some Facts</h3>
+                <p class="font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="images/icons/ribon.png" alt="" class="card-image">
+                        <h3 class="card-number">54</h3>
+                        <h5 class="card-value">Awards Winnings</h5>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/projects.png" alt="" class="card-image">
+                        <h3 class="card-number">1458</h3>
+                        <h5 class="card-value">Project Finishned</h5>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/customers.png" alt="" class="card-image">
+                        <h3 class="card-number">590</h3>
+                        <h5 class="card-value">Clients Worked</h5>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/email.png" alt="" class="card-image">
+                        <h3 class="card-number">22578</h3>
+                        <h5 class="card-value">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
