--- a/index.html
+++ b/index.html
@@ -41,6 +41,40 @@
                  <button class="button1">Explore More</button>
             </div>
         </section>
+        <section class="company-features">
+             <div class="company-feature-list">
+                <h3 class="company-feature-title">
+                    Features you will <br>love & enjoy
+
+                </h3>
+                <p class="company-feature-description font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <div class="company-feature-card container">
+                    <div class="feature-card">
+                        <h5 class="feature-card-title">Dexktop & Mobile Version</h5>
+                        <p class="feature-card-description font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card">
+                        <h5 class="feature-card-title">Dexktop & Mobile Version</h5>
+                        <p class="feature-card-description font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card">
+                        <h5 class="feature-card-title">Dexktop & Mobile Version</h5>
+                        <p class="feature-card-description font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card">
+                        <h5 class="feature-card-title">Dexktop & Mobile Version</h5>
+                        <p class="feature-card-description font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                </div>
+
+             </div>
+             <div class="architect-image">
+                 <img src="images/architect.png" alt="">
+                 <button class="button3"><span id="but1">10+Year <br></span><span id="but2">Experience</span></button>
+             </div>
+        </section>
         <section>
             <div class="fact-container">
                 <h3>Some Facts</h3>
@@ -69,10 +103,24 @@
                 </div>
             </div>
         </section>
+        <section class="sponsor">
+            <div class="sponsor-info">
+                <h3 class="sponsor-info-title">Our Sponspors</h3>
+                <p class="sponsor-info-description font-color-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-image">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+
+        </section>
 
     </main>
-    <footer>
-
+    <footer class="bg-color1">
+          <p class="font-color-dark2">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
